@@ -2,9 +2,6 @@ cp lib/JCuda-All-0.6.0-bin-linux-x86_64/* lib/
 cp lib/JCuda-All-0.6.0-bin-apple-x86_64/* lib/
 
 
-java -Dfile.encoding=UTF8 -Xmx1536M -Xss1M -XX:+CMSClassUnloadingEnabled -XX:MaxPermSize=256m -jar sbt-launch-*.jar "start-script"
-
-
 java -Dfile.encoding=UTF8 -Xmx1536M -Xss1M -XX:+CMSClassUnloadingEnabled -XX:MaxPermSize=256m -jar sbt-launch-*.jar "one-jar"
 JARPATH=`expr target/scala-*/ocular_*-*-one-jar.jar`
 FILENAME=$(basename $JARPATH)
